<resources>

    <string name="acessar">Access</string>
    <string name="cadastroMotorista">Insert Driver</string>
    <string name="solicitacao">Request</string>
    <string name="cadastrarPosto">Insert Gas Station</string>
    <string name="cadastrarCarro">Insert Car</string>
    <string name="title_activity_principal_ctb">CTB ABASTECIMENTO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="novo">Novo</string>
    <string name="mapa">mapa</string>
    <string name="sair">sair</string>
    <string name="nome_do_estabelecimento">Nome do Estabelecimento:</string>
    <string name="descricao">Descricao</string>
    <string name="destalhes_relatorio">Destalhes Relatorio</string>
    <string name="help">help</string>
    <string name="titulo_editando">titulo_editando</string>
    <string name="titulo_incluindo">titulo_incluindo</string>
    <string name="obrigatorio">obrigatorio</string>
    <string name="btFragment">btFragment</string>



    <string name="app_name">MobileProjectCTB</string>
    <string name="Login">Login</string>
    <string name="senha">Password</string>
    <string name="Acessar">Access</string>
    <string name="ControleAbastecimento">Supply Control</string>
    <string name="cadastrar">Register</string>
    <string name="cadastrarPessoa">Register People</string>
    <string name="consultarPessoa">View People</string>
    <string name="veiculo">Vehicle</string>
    <string name="pessoa">People</string>
    <string name="modelo">Model</string>
    <string name="fabricante">Manufacturer</string>
    <string name="placa">Vehicle plate</string>
    <string name="chassi">Chassis</string>
    <string name="quilometragem">Mileage</string>
    <string name="modificar">Modify</string>
    <string name="nome">Name</string>
    <string name="email">Email</string>
    <string name="salvar">Save</string>
    <string name="excluir">Delete</string>
    <string name="cancelar">Cancel</string>
    <string name="fechar">Close</string>


    <!-- TODO: Remove or change this placeholder text -->


    <string name="title_activity_lista_pessoa">ListaPessoaActivity</string>

</resources>
